objects/vlocity_ins__PromotionApplicableProduct__c.object
<CustomObject>
    <description>DEPRECATED. Use Promotion Item instead.</description>
    <fields>
        <fullName>vlocity_ins__ContextOfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Applicable Product</relationshipLabel>
        <relationshipName>PromotionApplicableProductContext</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Applicable Product (Applicable Product)</relationshipLabel>
        <relationshipName>PromotionApplicableProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Promotion Applicable Product</relationshipLabel>
        <relationshipName>PromotionApplicableProduct</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promotion Applicable Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicable Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Applicable Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>